tests/parser_samples/valid/microinstruction_with_label.mas
%i i1 {
        a;
    l1:
        b;
    l2, l3:
        c | d;
    l4,
    l5,
    l6:
        a | b;
}