tests/parser_samples/invalid/microinstruction_with_label/1.mas
%i a {
    l1: a | b @l2;
    l: ;
}